Implementação do side menu ao invés do tabs controller

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,11 @@
 page-home {
-
+    .button-md {
+        color: #488aff;
+        background-color: white;
+    }
+    .button-md:active {
+        color: white;
+        background-color: #488aff;
+    }
 }
+
