--- a/src/pages/home-lojista/home-lojista.scss
+++ b/src/pages/home-lojista/home-lojista.scss
@@ -1,3 +1,11 @@
-page-home-lojista {
-
+page-home {
+    .button-md {
+        color: #488aff;
+        background-color: white;
+    }
+    .button-md::after {
+        color: #488aff;
+        background-color: white;
+    }
 }
+
